--- a/index.html
+++ b/index.html
@@ -38,23 +38,26 @@
           <div class="weather-main">
             <img id="main-icon" src="icons/sun.png" alt="Weather icon" />
             <div class="temperature-container">
-              <p id="temperature">-°C</p>
-              <p id="feels-like">Feels like: -°C</p>
+              <p id="temperature"></p>
             </div>
           </div>
 
           <div class="weather-stats">
             <div class="stat-item">
               <span class="stat-label">Wind</span>
-              <span class="stat-value" id="wind-speed">- km/h</span>
+              <span class="stat-value" id="wind-speed"></span>
             </div>
             <div class="stat-item">
               <span class="stat-label">Humidity</span>
-              <span class="stat-value" id="humidity">- %</span>
+              <span class="stat-value" id="humidity"></span>
             </div>
             <div class="stat-item" data-type="conditions">
               <span class="stat-label">Conditions</span>
               <span class="stat-value" id="conditions">-</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-label">Feels like:</span>
+              <span class="stat-value" id="feels-like"></span>
             </div>
           </div>
         </div>
