add the celcius to fahrenheit functionnality

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <p id="temperature"></p>
             </div>
           </div>
+          <button id="fahrenheit">Fahrenheit</button>
 
           <div class="weather-stats">
             <div class="stat-item">
