--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
           required
         />
         <button type="submit">Get Weather</button>
+        <a href="https://github.com/PierreGronnier" target="_blank">
+          <img src="icons/github.png" alt="GitHub" class="github-logo" />
+        </a>
       </form>
 
       <div class="weather-info" id="weather-info" style="display: none">
