minor style change

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <span class="stat-value" id="conditions">-</span>
             </div>
             <div class="stat-item">
-              <span class="stat-label">Feels like:</span>
+              <span class="stat-label">Feels like</span>
               <span class="stat-value" id="feels-like"></span>
             </div>
           </div>
